@@ -80,6 +80,8 @@ Changelog for NICOS 2
   - Temperature controller now respects ramping time for timeout, and allows
     to choose not to raise on timing out.
 
+  - Added TAS commands to calculate powder rays and spurion positions.
+
 **Release 2.0.1**
 
   - In "ImageStorage", made sure the data file isn't overwritten unless
